# AnonNftOwnershipProver

./: README.md
host/: Cargo.toml
host/src/: cli_input.rs  main.rs  nft_utils.rs  termbin_utils.rs  zk_utils.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
