[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "^3.0.5" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
ethers = "2.0.14"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
base64 = "0.22.1"
